--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ ul {
 }
 
 .controle-e {
-    border: 1px solid black;
+    border: 3px solid black;
     border-radius: 40px 0 0 40px;
     background-color: #00bae1;
     display: grid;
@@ -49,7 +49,7 @@ ul {
 }
 
 .controle-d {
-    border: 1px solid black;
+    border: 3px solid black;
     border-radius: 0 40px 40px 0;
     background-color: #ff5c51;
     display: grid;
@@ -175,11 +175,39 @@ ul {
     text-align: center;
 }
 .select{
-    margin-top: 0px;
-    margin-left: 10px;
+    margin-top: -2px;
+    margin-left: 5px;
     border-radius: 50%;
     height: 20px;
     width: 20px;
     background-color: #2e3235;
     text-align: center;
+}
+.gatilho-1 {
+    width: 90px;
+    height: 40px;
+    border-radius: 40px 0 0 0;
+    background-color: #1b1b1b;
+    position: relative;
+    z-index: -1;
+    margin-bottom: -36px;
+    margin-left: -5px;
+}
+.gatilho-2 {
+    width: 90px;
+    height: 40px;
+    border-radius:  0 40px 0 0;
+    background-color: #1b1b1b;
+    position: relative;
+    z-index: -1;
+    margin-top: -8px;
+    margin-left: -1px;
+}
+.seta-e{
+    position: relative;
+    right: -5px;
+}
+.seta-d{
+    position: relative;
+    left: -5px;
 }
