--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ ul {
     text-align: center;
 }
 .select{
-    margin-top: -2px;
+
     margin-left: 5px;
     border-radius: 50%;
     height: 20px;
@@ -188,20 +188,20 @@ ul {
     height: 40px;
     border-radius: 40px 0 0 0;
     background-color: #1b1b1b;
-    position: relative;
+    position: absolute;
     z-index: -1;
-    margin-bottom: -36px;
-    margin-left: -5px;
+    margin-top: -8px;
+    margin-left: -4px;
 }
 .gatilho-2 {
     width: 90px;
     height: 40px;
     border-radius:  0 40px 0 0;
     background-color: #1b1b1b;
-    position: relative;
-    z-index: -1;
+    position: absolute;
     margin-top: -8px;
-    margin-left: -1px;
+    margin-right: -4px;
+    z-index: -1;
 }
 .seta-e{
     position: relative;
