--- a/css/style.css
+++ b/css/style.css
@@ -50,17 +50,21 @@ ul {
     animation: cimabaixo 0.5s ease-out;
     position: relative;
 }
-@keyframes cimabaixo{
-    0%{
+
+@keyframes cimabaixo {
+    0% {
         top: -100%;
     }
-    50%{
+
+    50% {
         top: -50%;
     }
-    100%{
+
+    100% {
         top: 0;
     }
 }
+
 .controle-d {
     border: 3px solid black;
     border-radius: 0 40px 40px 0;
@@ -83,15 +87,100 @@ ul {
     border-top: 20px solid #000;
     border-bottom: 20px solid #000;
     border-radius: 8px;
+    background: linear-gradient(5deg, #000, #e51218);
+    width: 100%;
+    height: 100%;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: 1fr;
+    grid-template-rows: 2fr 1fr;
 }
 
+.content-tela {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transition:0.3s ;
+    animation: controle-1 0.5s 2.2s;
+}
+@keyframes controle-1{
+    50%{
+        top:-10%;
+    }
+    100%{
+        top:0;
+    }
+}
+
+.esq {
+    border: 6px solid white;
+    height: 100px;
+    width: 50px;
+    border-radius: 20px 0 0 20px;
+    margin-right: 5px;
+}
+
+.esq>div {
+    border-radius: 50%;
+    height: 25px;
+    width: 25px;
+    border: 5px solid white;
+    position: relative;
+    top: 10px;
+    left:6px
+}
+
+.dir {
+    background: white;
+    height: 100px;
+    width: 50px;
+    border-radius: 0 20px 20px 0;
+    margin-left: 5px;
+    position: relative;
+    animation: dirbaixo 0.4s 2s;
+    transition: 0.3s;
+}
+@keyframes dirbaixo{
+    50%{
+        top:-30%;
+    }
+    100%{
+        top:0;
+    }
+}
+
+.dir>div {
+    border-radius: 50%;
+    height: 25px;
+    width: 25px;
+    background: #e51218;
+    position: relative;
+    top:40px;
+    left: 12px;
+}
+.title{
+    color: white;
+    margin: 5px auto;
+}
+.title h1{
+    margin: 0 auto;
+    font-size:22px;
+}
+.title h3{
+    margin: 0 auto;
+    font-size:12px;
+}
 .direcional-1 {
     border: 4px solid #292c2e;
     border-radius: 50%;
     width: 40px;
     height: 40px;
     background: #2e3235;
-    margin:20px auto;;
+    margin: 20px auto;
     box-shadow: inset 0 0 2px 2px #1b1b1b;
 }
 
@@ -101,7 +190,7 @@ ul {
     width: 40px;
     height: 40px;
     background: #2e3235;
-    margin:0px auto;
+    margin: 0px auto;
     box-shadow: inset 0 0 2px 2px #1b1b1b;
 }
 
@@ -176,12 +265,13 @@ ul {
 }
 
 .mais {
-    font-weight:bolder;
+    font-weight: bolder;
     font-size: x-large;
     color: #2e3235;
     margin-left: 5px;
 }
-.start{
+
+.start {
     margin-left: 60px;
     margin-top: -20px;
     height: 20px;
@@ -189,7 +279,8 @@ ul {
     background-color: #2e3235;
     text-align: center;
 }
-.select{
+
+.select {
 
     margin-left: 5px;
     border-radius: 50%;
@@ -198,6 +289,7 @@ ul {
     background-color: #2e3235;
     text-align: center;
 }
+
 .gatilho-1 {
     width: 90px;
     height: 40px;
@@ -205,24 +297,27 @@ ul {
     background-color: #1b1b1b;
     position: absolute;
     z-index: -1;
-    margin-top: -8px;
+    margin-top: -224px;
     margin-left: -4px;
 }
+
 .gatilho-2 {
     width: 90px;
     height: 40px;
-    border-radius:  0 40px 0 0;
+    border-radius: 0 40px 0 0;
     background-color: #1b1b1b;
     position: absolute;
     margin-top: -8px;
     margin-right: -4px;
     z-index: -1;
 }
-.seta-e{
+
+.seta-e {
     position: relative;
     right: -5px;
 }
-.seta-d{
+
+.seta-d {
     position: relative;
     left: -5px;
 }
