--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,11 @@ html,
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 62.5%;
     height: 100vh;
     width: 100vw;
+    background: linear-gradient(45deg, #baf7f7, #fff);
 }
 
 a {
@@ -80,7 +81,16 @@ ul {
     display: grid;
     background: #2e3235;
 }
-
+.desliga{
+    width: 20px;
+    height: 20px;
+    background-color: #1b1b1b;
+    position: absolute;
+    z-index:-1 ;
+    margin-left: 110px;
+    margin-top: -5px;
+    
+}
 .tela {
     border-left: 28px solid #000;
     border-right: 28px solid #000;
@@ -95,6 +105,7 @@ ul {
     align-items: center;
     grid-template-columns: 1fr;
     grid-template-rows: 2fr 1fr;
+
 }
 
 .content-tela {
@@ -164,15 +175,18 @@ ul {
 }
 .title{
     color: white;
-    margin: 5px auto;
+    margin: 0 auto;
 }
 .title h1{
-    margin: 0 auto;
     font-size:22px;
+    text-align: center;
+    font-weight: bold;
+    width: 100px;
 }
 .title h3{
-    margin: 0 auto;
     font-size:12px;
+    text-align: center;
+    width: 100px;
 }
 .direcional-1 {
     border: 4px solid #292c2e;
